--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,19 +1,10 @@
 .button {
-   display: flex;
-   flex-direction: column;
    width: 70px;
-   height: 15px;
-   background-color: #27a1ff;
-   color: #fff;
-   border: none;
-   border-radius: 3px;
    font-size: 12px;
-   align-items: center;
-   justify-content: center;
+   border-radius: 3px;
+   border: 2px solid #cfcfcf;
+   background: #fff;
+   box-sizing: border-box;
+   padding: 1px 6px;
    cursor: pointer;
-   padding: 5px;
-}
-
-.button_type_pressed {
-   background-color: #c2e4fe;
 }
