--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -15,7 +15,7 @@
 .popup__content {
    padding:20px;
    margin: auto;
-   width: 290px;
+   width: 300px;
    background-color: #ffffff;
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
@@ -39,4 +39,10 @@
    background-repeat: no-repeat;
    background-size: contain;
    cursor: pointer;
+}
+
+.popup_type_small .popup__content {
+   position: absolute;
+   left: 220px;
+   top: 80px;
 }
