Изменить разметку компанента StartPage

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,6 +1,7 @@
 .calendar {
    display: flex;
    flex-direction: column;
-   width: 1440px;
+   max-width: 1000px;
+   height: 100%;
    margin: 0 auto;
 }
