--- a/src/components/ButtonBlue/ButtonBlue.css
+++ b/src/components/ButtonBlue/ButtonBlue.css
@@ -1,17 +1,18 @@
 .btn {
    display: flex;
    flex-direction: column;
-   width: 70px;
-   height: 15px;
-   background-color: #27a1ff;
+   width: 79px;
+   height: 26px;
+   background: #0271c7;
    color: #fff;
    border: none;
-   border-radius: 3px;
+   border-radius: 2px;
    font-size: 12px;
    align-items: center;
    justify-content: center;
    cursor: pointer;
-   padding: 5px;
+   padding: 6px 12px;
+   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.25);
 }
 
 .btn_type_pressed {
