--- a/src/components/PopupWithForm/PopupWithForm.css
+++ b/src/components/PopupWithForm/PopupWithForm.css
@@ -1,21 +1,26 @@
 .popup {
    display: flex;
    background-color:transparent;
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
    transition: 0.5s ease;
    visibility: hidden;
    opacity: 0;
    cursor: pointer;
-   position: relative;
 }
 
 .popup__content {
-   padding:20px;
+   padding:20px 12px;
    margin: auto;
-   width: 300px;
+   width: 285px;
    background-color: #ffffff;
    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
    border-radius: 10px;
    box-sizing: border-box;
+   position: relative;
    cursor: default;
 }
 
