Oткрыть small popup в зависимости от координат

--- a/src/components/DayCell/DayCell.css
+++ b/src/components/DayCell/DayCell.css
@@ -25,6 +25,10 @@
    cursor: pointer;
 }
 
+.day-element__data-container {
+   text-transform: capitalize; 
+}
+
 .day-element__info-container {
    font-size: 14px;
    padding: 0;
