--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -56,3 +56,72 @@ input[type='search']::-webkit-search-cancel-button {
    margin-right: 1;
    cursor: pointer;
 }
+
+.search__container {
+   display: none;
+   gap: 6px;
+   position: absolute;
+   top: 90px;
+   right: 0;
+   width: 210px;
+   height: 107px;
+   background: #ffffff;
+   box-sizing: border-box;
+   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+   border-radius: 3px;
+   padding: 6px 4px;
+   z-index: 2;
+   overflow: hidden auto;
+}
+
+.search__container_type_visible {
+   display: flex;
+}
+
+.search__list {
+   display: flex;
+   flex-direction: column;
+   font-style: normal;
+   color: #292929;
+   list-style: none;
+   margin: 0;
+   padding: 0;
+}
+
+.search__list-event:focus {
+   background: #27a1ff;
+   color: #ffffff;
+   outline: none;
+}
+
+.search__list-event {
+   display: flex;
+   flex-direction: column;
+   width: 190px;
+   height: 44px;
+}
+
+.search__title {
+   font-weight: 500;
+   font-size: 14px;
+   line-height: 16px;
+   color: #292929;
+   width: 135px;
+   margin: 0;
+   margin-bottom: 6px;
+   padding: 0;
+   text-overflow: ellipsis;
+   overflow: hidden;
+   white-space: nowrap;
+}
+
+.search__text {
+   font-weight: 300;
+   font-size: 12px;
+   line-height: 14px;
+   color: #292929;
+   width: 135px;
+   margin: 0;
+   padding: 0;
+   opacity: 0.7;
+}
